@@ -1,0 +1,12 @@
+// Copyright 2002-2012, University of Colorado
+package edu.colorado.phet.fractions.buildafraction.view;
+
+import lombok.Data;
+
+/**
+ * @author Sam Reid
+ */
+public @Data class LevelIdentifier {
+    public final int levelIndex;
+    public final LevelType levelType;
+}
